--- a/Project/package.json
+++ b/Project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11"
